--- a/research.ipynb
+++ b/research.ipynb
@@ -1119,6 +1119,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "4ade5dfc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os \n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 28,
    "id": "ba8b319d",
    "metadata": {},
@@ -1244,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "aaa4fc9a",
    "metadata": {},
    "outputs": [],
@@ -1255,7 +1278,7 @@
     "\n",
     "sklearn_estimator = SKLearn(\n",
     "    entry_point=\"script.py\",\n",
-    "    role=\"arn:aws:iam::456422343775:role/sagemeakeaccess\",\n",
+    "    role=os.getenv('roles'),\n",
     "    instance_count=1,\n",
     "    instance_type=\"ml.m5.large\",\n",
     "    framework_version=FRAMEWORK_VERSION,\n",
@@ -1600,7 +1623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "6409e5b2",
    "metadata": {},
    "outputs": [],
@@ -1613,7 +1636,7 @@
     "model=SKLearnModel(\n",
     "    name=model_name,\n",
     "    model_data=artifact,\n",
-    "    role=\"arn:aws:iam::456422343775:role/sagemeakeaccess\",\n",
+    "    role=os.getenv('roles'),\n",
     "    entry_point=\"script.py\",\n",
     "    framework_version=FRAMEWORK_VERSION\n",
     ")"
